--- a/api-def/uniwebview.toml
+++ b/api-def/uniwebview.toml
@@ -184,6 +184,54 @@ If you are using UniWebView in these versions, you may want to set this value to
 """
 
 [[Methods]]
+name = "SetTransform"
+syntax = "SetTransform(UniWebViewTransform transform)"
+returnType = "void"
+summary = """
+Applies a transformation to the web view, including rotation and scaling.
+
+This method allows you to rotate and scale the web view by specifying a `UniWebViewTransform`
+object. The transformation is applied relative to the web view's current position and size, with its center
+as the anchor.
+
+The transformation includes:
+
+- **Rotation**: The angle (in degrees) by which the web view should be rotated. Positive values rotate the web
+view clockwise, while negative values rotate it counterclockwise.
+- **Scaling**: The scale factors for the X and Y axes. A scale factor of 1.0 means no scaling, while values
+greater than 1.0 enlarge the web view and values less than 1.0 shrink it.
+
+This method works on iOS and Android. It does nothing in Unity Editor on macOS.
+"""
+example = """
+```csharp
+// Rotate the web view 45 degrees clockwise and scale it half of its original size.
+var transform = new UniWebViewTransform(45, 0.5f, 0.5f);
+webView.SetTransform(transform);
+
+// Show a landscape web page in the game with only portrait mode.
+// Calculate dimensions for a rotated full-screen web view
+float x = (Screen.width - Screen.height) / 2.0f;
+float y = (Screen.height - Screen.width) / 2.0f;
+float width = Screen.height;
+float height = Screen.width;
+
+// Set the frame to properly position the web view
+webView.Frame = new Rect(x, y, width, height);
+
+var transform = new UniWebViewTransform(90);
+webView.SetTransform(transform);
+
+webView.Load("https://example.com");
+webView.Show();
+```
+"""
+[[Methods.parameters]]
+name = "transform"
+type = "UniWebViewTransform"
+summary = "An object containing the rotation angle and scale factors to apply to the web view."
+
+[[Methods]]
 name = "Load"
 syntax = "Load(string url, bool skipEncoding, string readAccessURL)"
 returnType = "void"
