Add SetPreferredCustomTabsBrowsers API documentation
- Document new API for setting preferred browsers for Custom Tabs
- Include detailed priority order explanation
- Add usage examples and common browser package names
- Clarify Android-only behavior

--- a/api-def/uniwebviewsafebrowsing.toml
+++ b/api-def/uniwebviewsafebrowsing.toml
@@ -89,6 +89,56 @@ name = "static"
 color = "blue"
 
 [[Methods]]
+name = "SetPreferredCustomTabsBrowsers"
+syntax = "SetPreferredCustomTabsBrowsers(string[] packages)"
+returnType = "void"
+summary = """
+Sets the preferred browsers for Custom Tabs in order of preference.
+
+This allows developers to specify which browsers should be preferred when multiple Custom Tabs providers are available on the device. This setting affects both SafeBrowsing and AuthenticationSession functionality.
+
+**Browser Selection Priority (Android):**
+1. **User-defined preferred packages** (highest priority) - checked in order
+2. **Default browser if it's Chromium-based** (Chrome, Edge, etc.)
+3. **Default browser if it supports Custom Tabs** (even non-Chromium)
+4. **Any Chromium-based browser** (only when no user preference is set)
+5. **Any available Custom Tabs provider** (last resort)
+
+This prioritization helps avoid browsers with incomplete Custom Tabs implementations (such as Firefox, which may not trigger `onNavigationEvent` callbacks properly).
+
+On iOS, this method has no effect as Safari is always used for safe browsing.
+"""
+example = """
+```csharp
+// Set Chrome and Brave as preferred browsers
+UniWebViewSafeBrowsing.SetPreferredCustomTabsBrowsers(new string[] {
+    "com.android.chrome",
+    "com.brave.browser"
+});
+
+var safeBrowsing = UniWebViewSafeBrowsing.Create("https://uniwebview.com");
+safeBrowsing.Show();
+```
+"""
+[[Methods.parameters]]
+name = "packages"
+type = "string[]"
+summary = """
+Array of browser package names in order of preference. Common package names include:
+- "com.android.chrome" (Chrome)
+- "com.brave.browser" (Brave Browser) 
+- "com.opera.browser" (Opera Browser)
+- "com.microsoft.emmx" (Microsoft Edge)
+- "com.sec.android.app.sbrowser" (Samsung Internet)
+"""
+[[Methods.badges]]
+name = "static"
+color = "blue"
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
 name = "Show"
 syntax = "Show()"
 returnType = "void"
