--- a/api-def/uniwebviewchannelmessage.toml
+++ b/api-def/uniwebviewchannelmessage.toml
@@ -152,7 +152,7 @@ The message handler should return null and call `message.Respond()` when the ope
 
 [[Methods]]
 name = "GetData"
-signature = "GetData<T>()"
+syntax = "GetData<T>()"
 returnType = "T"
 summary = """
 Parses the message data as the specified type.
@@ -185,7 +185,7 @@ public class ScoreData {
 
 [[Methods]]
 name = "TryGetData"
-signature = "TryGetData<T>(out T result)"
+syntax = "TryGetData<T>(out T result)"
 returnType = "bool"
 summary = """
 Safely parses the message data as the specified type.
@@ -217,7 +217,7 @@ summary = "The parsed data object if successful, default(T) if parsing fails."
 
 [[Methods]]
 name = "Respond"
-signature = "Respond(UniWebViewChannelMessageResponse response)"
+syntax = "Respond(UniWebViewChannelMessageResponse response)"
 returnType = "void"
 summary = """
 Sends an async response for this message.
@@ -259,7 +259,7 @@ summary = "The response to send back to JavaScript."
 
 [[Methods]]
 name = "Respond"
-signature = "Respond(object data)"
+syntax = "Respond(object data)"
 returnType = "void"
 summary = """
 Convenience method for success responses.
@@ -289,7 +289,7 @@ summary = "The data to send back as a successful response."
 
 [[Methods]]
 name = "RespondError"
-signature = "RespondError(object errorData)"
+syntax = "RespondError(object errorData)"
 returnType = "void"
 summary = """
 Convenience method for error responses.
