--- a/docs/.vuepress/public/api/uniwebviewchannelmessagetype.toml
+++ b/docs/.vuepress/public/api/uniwebviewchannelmessagetype.toml
@@ -3,7 +3,7 @@ file = "UniWebViewChannelMessageType"
 
 summary = """Channel message types corresponding to different JavaScript call methods.
 
-This enumeration defines the three communication patterns supported by the Channel Message system.
+This enumeration defines the three communication patterns supported by the Channel Messaging System.
 Each type has different characteristics regarding response handling and timing.
 """
 
