--- a/api-def/uniwebview.toml
+++ b/api-def/uniwebview.toml
@@ -679,7 +679,7 @@ Adds a domain to the SSL checking white list.
 This API is deprecated and no longer bypasses SSL certificate errors.
 Use `AddSslPinnedFingerprint` instead.
 """
-notice = "This method is deprecated and kept for binary compatibility only. Configure explicit certificate pinning via AddSslPinnedFingerprint to trust custom certificates."
+notice = "This method is deprecated and not working. It is just kept for source compatibility only. Configure explicit certificate pinning via `AddSslPinnedFingerprint` to trust custom certificates."
 example = """
 ```csharp
 // Deprecated. No longer bypasses certificate errors.
@@ -696,7 +696,7 @@ name = "RemoveSslExceptionDomain"
 syntax = "RemoveSslExceptionDomain(string domain)"
 returnType = "void"
 summary = "Removes a domain from the deprecated SSL exception white list."
-notice = "This method is deprecated. Remove any legacy SSL exception before migrating to AddSslPinnedFingerprint."
+notice = "This method is deprecated. Remove any legacy SSL exception before migrating to `AddSslPinnedFingerprint`."
 example = """
 ```csharp
 webView.RemoveSslExceptionDomain("self-signed.badssl.com");
@@ -715,11 +715,25 @@ summary = """
 Pins a SHA-256 certificate fingerprint for a domain.
 
 When an SSL error occurs, UniWebView compares the presented certificate fingerprint with the pinned values. The load proceeds only if a match is found.
+This is useful for handling self-signed certificates or certificates issued by private CAs.
+
+To obtain the SHA-256 fingerprint of a server certificate, you can use the following OpenSSL command by replacing `self-signed.badssl.com` with your target domain:
+
+```bash
+echo | openssl s_client -connect self-signed.badssl.com:443 -servername self-signed.badssl.com \
+  | openssl x509 -fingerprint -sha256 -noout
+```
 """
 example = """
 ```csharp
 // Compute the SHA-256 fingerprint of the server certificate first.
-webView.AddSslPinnedFingerprint("self-signed.badssl.com", "62:F1:B6:F8:B2:4B:29:CB:F3:18:BD:8A:E9:82:E0:60:03:97:89:6C:3C:DD:F8:E5:BE:6F:68:46:9E:B9:21:62");
+webView.AddSslPinnedFingerprint(
+  "self-signed.badssl.com", 
+  "62:F1:B6:F8:B2:4B:29:CB:F3:18:BD:8A:E9:82:E0:60:03:97:89:6C:3C:DD:F8:E5:BE:6F:68:46:9E:B9:21:62"
+);
+
+// Now load the page with the domain and the self-signed certificate won't trigger an error.
+webView.Load("https://self-signed.badssl.com");
 ```
 """
 [[Methods.parameters]]
@@ -739,7 +753,10 @@ returnType = "void"
 summary = "Removes a previously pinned fingerprint for the given domain."
 example = """
 ```csharp
-webView.RemoveSslPinnedFingerprint("self-signed.badssl.com", "62:F1:B6:F8:B2:4B:29:CB:F3:18:BD:8A:E9:82:E0:60:03:97:89:6C:3C:DD:F8:E5:BE:6F:68:46:9E:B9:21:62");
+webView.RemoveSslPinnedFingerprint(
+  "self-signed.badssl.com", 
+  "62:F1:B6:F8:B2:4B:29:CB:F3:18:BD:8A:E9:82:E0:60:03:97:89:6C:3C:DD:F8:E5:BE:6F:68:46:9E:B9:21:62"
+);
 ```
 """
 [[Methods.parameters]]
