--- a/docs/.vuepress/public/api/uniwebview.toml
+++ b/docs/.vuepress/public/api/uniwebview.toml
@@ -676,20 +676,14 @@ returnType = "void"
 summary = """
 Adds a domain to the SSL checking white list.
 
-If you are trying to access a website with un-trusted or expired certification, 
-the web view will prevent its loading. If you could confirm that this site is trusted,
-you can add the domain as an SSL exception, so you could visit it.
+This API is deprecated and no longer bypasses SSL certificate errors.
+Use `AddSslPinnedFingerprint` instead.
 """
-notice = "We strongly suggest you upgrade your site certification to a trusted one. It would be dangerous to add a site as SSL exception and your user might be exposed to the risk of Man-in-the-middle attack. You should know exactly what you will do before adding a domain to the whitelist."
+notice = "This method is deprecated and not working. It is just kept for source compatibility only. Configure explicit certificate pinning via `AddSslPinnedFingerprint` to trust custom certificates."
 example = """
 ```csharp
-// This loading will fail since the certification is a self-signed one and not trusted.
-webView.Load("https://self-signed.badssl.com/"); 
-
-// Add "self-signed.badssl.com" as trusted.
+// Deprecated. No longer bypasses certificate errors.
 webView.AddSslExceptionDomain("self-signed.badssl.com");
-// This page should load now.
-webView.Load("https://self-signed.badssl.com/"); 
 ```
 """
 [[Methods.parameters]]
@@ -701,7 +695,8 @@ summary = "The domain to add. It should not contain any scheme or path part in u
 name = "RemoveSslExceptionDomain"
 syntax = "RemoveSslExceptionDomain(string domain)"
 returnType = "void"
-summary = "Removes a domain from the SSL checking white list."
+summary = "Removes a domain from the deprecated SSL exception white list."
+notice = "This method is deprecated. Remove any legacy SSL exception before migrating to `AddSslPinnedFingerprint`."
 example = """
 ```csharp
 webView.RemoveSslExceptionDomain("self-signed.badssl.com");
@@ -711,6 +706,67 @@ webView.RemoveSslExceptionDomain("self-signed.badssl.com");
 name = "domain"
 type = "string"
 summary = "The domain to remove. It should not contain any scheme or path part in url."
+
+[[Methods]]
+name = "AddSslPinnedFingerprint"
+syntax = "AddSslPinnedFingerprint(string domain, string fingerprint)"
+returnType = "void"
+summary = """
+Pins a SHA-256 certificate fingerprint for a domain.
+
+When an SSL error occurs, UniWebView compares the presented certificate fingerprint with the pinned values. The load proceeds only if a match is found.
+This is useful for handling self-signed certificates or certificates issued by private CAs.
+
+To obtain the SHA-256 fingerprint of a server certificate, you can use the following OpenSSL command by replacing `self-signed.badssl.com` with your target domain:
+
+```bash
+echo | openssl s_client -connect self-signed.badssl.com:443 -servername self-signed.badssl.com | openssl x509 -fingerprint -sha256 -noout
+```
+"""
+example = """
+```csharp
+// Compute the SHA-256 fingerprint of the server certificate first.
+webView.AddSslPinnedFingerprint(
+  "self-signed.badssl.com", 
+  "62:F1:B6:F8:B2:4B:29:CB:F3:18:BD:8A:E9:82:E0:60:03:97:89:6C:3C:DD:F8:E5:BE:6F:68:46:9E:B9:21:62"
+);
+
+// Now load the page with the domain and the self-signed certificate won't trigger an error.
+webView.Load("https://self-signed.badssl.com");
+```
+"""
+[[Methods.parameters]]
+name = "domain"
+type = "string"
+summary = "The target domain. It should not include scheme or path parts."
+
+[[Methods.parameters]]
+name = "fingerprint"
+type = "string"
+summary = "The expected certificate SHA-256 fingerprint. Colons are optional and the comparison ignores casing."
+
+[[Methods]]
+name = "RemoveSslPinnedFingerprint"
+syntax = "RemoveSslPinnedFingerprint(string domain, string fingerprint)"
+returnType = "void"
+summary = "Removes a previously pinned fingerprint for the given domain."
+example = """
+```csharp
+webView.RemoveSslPinnedFingerprint(
+  "self-signed.badssl.com", 
+  "62:F1:B6:F8:B2:4B:29:CB:F3:18:BD:8A:E9:82:E0:60:03:97:89:6C:3C:DD:F8:E5:BE:6F:68:46:9E:B9:21:62"
+);
+```
+"""
+[[Methods.parameters]]
+name = "domain"
+type = "string"
+summary = "The domain bound to the fingerprint."
+
+[[Methods.parameters]]
+name = "fingerprint"
+type = "string"
+summary = "The fingerprint to remove. Use the same format that was provided to AddSslPinnedFingerprint."
 
 [[Methods]]
 name = "SetHeaderField"
@@ -2150,6 +2206,39 @@ summary = "Radius for the bottom-left corner in pixels."
 name = "bottomRight"
 type = "float"
 summary = "Radius for the bottom-right corner in pixels."
+
+[[Methods]]
+name = "SetShadow"
+syntax = "SetShadow(UniWebViewShadow shadow)"
+returnType = "void"
+summary = """
+Configures the drop shadow rendered by the native web view container.
+
+The shadow follows the same corner radii that you configured through `SetRoundCornerRadius`. When the `shadow` argument
+disables itself (all zero values or `UniWebViewShadow.None`), UniWebView removes the shadow while leaving the corner
+rounding intact.
+"""
+example = """
+```csharp
+// Create a soft shadow that offsets slightly downward.
+var shadow = new UniWebViewShadow(
+    radius: 18.0f,
+    opacity: 0.35f,
+    offsetX: 0.0f,
+    offsetY: -6.0f,
+    color: Color.black,
+    spread: 4.0f
+);
+webView.SetShadow(shadow);
+
+// Disable the shadow completely.
+webView.SetShadow(UniWebViewShadow.None);
+```
+"""
+[[Methods.parameters]]
+name = "shadow"
+type = "UniWebViewShadow"
+summary = "Shadow definition including blur radius, opacity, color, optional spread, and XY offset."
 
 [[Methods]]
 name = "RefreshTransparencyClickingThroughLayout"
